--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,6 @@ django-crispy-forms==1.8.1
 docutils==0.16
 gunicorn==20.0.4
 idna==2.8
-Kivy==1.11.1
-kivy-deps.glew==0.1.12
-kivy-deps.gstreamer==0.1.18
-kivy-deps.sdl2==0.1.23
-Kivy-examples==1.11.1
-Kivy-Garden==0.1.4
 mathparse==0.1.2
 murmurhash==1.0.2
 nltk==3.4.5
@@ -42,3 +36,4 @@ thinc==7.0.8
 tqdm==4.41.1
 urllib3==1.25.7
 wasabi==0.6.0
+whitenoise==4.1.2
